<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AdventuresofLillyActivity!</string>
    <string name="app_name">Adventures of Lilly</string>
	<string name="lilly_1_1">One sunny day, in San Diego, a small brown dog awoke, sad and alone.  She had floppy ears, and a dark brown stripe down her back.  Her lower teeth stuck out from under her lip, making it look like she was smiling.</string>
    <string name="lilly_1_2">The little brown dog wasn’t smiling though. She was all alone in a pen with a concrete floor. The other dogs at the animal shelter were barking loudly. The small brown dog couldn’t see them and the unknown voices frightened  her. This was a scary place for a little puppy without any friends. </string>
    <string name="lilly_1_3">Little did the puppy know, today would be the day she would not only meet a friend, but find her family.</string>
    <string name="lilly_1_4">That afternoon, two people the little puppy had never seen before came into her pen.  She was afraid of the strangers and tried to stay as far away as she could.  The strangers knelt down and kindly offered her treats!</string>
    <string name="lilly_1_5">Slowly the shy little puppy came closer. She was afraid of the strangers, but the treats they were holding smelled delicious. Surely the nice lady who fed her each day wouldn’t bring people to meet her if they weren’t friendly.</string>
    <string name="lilly_1_6">The little brown dog didn’t know it yet, but the two strangers were about to become her mommy and daddy.  Her first great adventure was about to begin!</string>
    <string name="lilly_1_7">The little puppy’s new parents picked out a pretty pink collar and a leash with flowers on it.  She watched as her mommy and daddy talked to the animal shelter workers and signed some papers. Then they waved good bye. She was their puppy now! </string>
    <string name="lilly_1_8">The puppy was nervous as she and her new parents got in the car.  Her mommy held her close and patted her back.  The puppy began to relax as her mommy and daddy reassured her and gave her lots of hugs and pats, as they drove home.</string>
    <string name="lilly_1_9">There was only one problem. The puppy needed a name! Her parents went back and forth with suggestions, but nothing sounded quite right.  Finally the puppy’s mom noticed the beautiful flowers on her leash.  This gave her mommy an idea… flower… hmmm my favorite flower is a Lilly! Yes! Lilly!  Lilly is her name! Daddy agreed.</string>
    <string name="lilly_1_10">Now Lilly had a mommy, a daddy, and a name! She was a very happy puppy and couldn’t wait to explore her new home!</string>
    <string name="about">About</string>
    <string name="about_andrios">We are a team of developers who write apps for Android and iPhone platforms. Our team has a diverse background including child care and military experience. Our goal is to make apps that help to make your life easier, please tell us how we\'re doing! If you like our apps, leave us a good comment, or purchase the premium features where available!</string>
                        
</resources>