<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <android.gesture.GestureOverlayView
            android:id="@+id/lilly_1_gestureOverlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gestureColor="#00000000"
            android:uncertainGestureColor="#00000000" >

            <ViewFlipper
                android:id="@+id/viewFlipper1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <RelativeLayout
                    android:id="@+id/lilly_1_1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/lilly_1_1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/lilly_1_1_TXT"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:background="@color/black"
                        android:gravity="center"
                        android:text="@string/lilly_1_1"
                        android:textSize="16dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lilly_1_2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/lilly_1_2"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/lilly_1_2_TXT"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/black"
                        android:gravity="center"
                        android:text="@string/lilly_1_2"
                        android:textSize="16dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lilly_1_3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/lilly_1_3"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/lilly_1_3_TXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:text="@string/lilly_1_3"
                        android:textSize="22dp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lilly_1_4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/LinearLayout08"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/lilly_1_4_TXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/lilly_1_4"
                            android:textSize="22dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout07"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lilly_1_4" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilly_1_5"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/LinearLayout03"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/lilly_1_5_TXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/lilly_1_5"
                            android:textSize="22dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout09"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lilly_1_5" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilly_1_6"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/LinearLayout10"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/lilly_1_6_TXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/lilly_1_6"
                            android:textSize="22dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout12"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lilly_1_6" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilly_1_7"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/LinearLayout13"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/lilly_1_7_TXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/lilly_1_7"
                            android:textSize="22dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout15"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lilly_1_7" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilly_1_8"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/LinearLayout16"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/lilly_1_8_TXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/lilly_1_8"
                            android:textSize="22dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout18"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lilly_1_8" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilly_1_9"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/LinearLayout11"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/lilly_1_9_TXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/lilly_1_9"
                            android:textSize="22dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout06"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView08"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lilly_1_8" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilly_1_10"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/LinearLayout19"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/lilly_1_10_TXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/lilly_1_10"
                            android:textSize="22dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout17"
                        android:layout_width="100dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView09"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lilly_1_8" />
                    </LinearLayout>
                </LinearLayout>
            </ViewFlipper>
        </android.gesture.GestureOverlayView>
    </LinearLayout>

</LinearLayout>